[gd_scene load_steps=8 format=2]

[ext_resource path="res://fluidBlue.png" type="Texture" id=1]
[ext_resource path="res://Montreal-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fluidRed.png" type="Texture" id=3]
[ext_resource path="res://fluidGreen.png" type="Texture" id=4]
[ext_resource path="res://set2_background.png" type="Texture" id=5]
[ext_resource path="res://Scenes/GameOver.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TouchScreenButton" parent="CanvasLayer/TextureRect"]
position = Vector2( 552, 320 )
scale = Vector2( 1.875, 1 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/TextureRect/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.2
margin_top = -7.0
margin_right = 20.8
margin_bottom = 7.0
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MistakesLabel" type="Label" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 200.0
margin_right = 512.0
margin_bottom = 279.0
rect_pivot_offset = Vector2( 264, 32 )
custom_fonts/font = SubResource( 1 )
text = "Mistakes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 336.0
margin_bottom = -520.0
rect_pivot_offset = Vector2( 264, 32 )
custom_fonts/font = SubResource( 1 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 96.0
margin_right = 512.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 264, 32 )
custom_fonts/font = SubResource( 1 )
text = "Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="TouchScreenButton" parent="CanvasLayer/TextureRect"]
position = Vector2( 344, 320 )
scale = Vector2( 2, 1 )
normal = ExtResource( 4 )
pressed = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/TextureRect/RestartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="released" from="CanvasLayer/TextureRect/QuitButton" to="." method="_on_QuitButton_released"]
[connection signal="released" from="CanvasLayer/TextureRect/RestartButton" to="." method="_on_RestartButton_released"]
